Fixed table header misalignment

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -100,6 +100,7 @@ nav ul {
 
 .report_table_header {
     color: #008a00;
+    font-weight: bold;
 }
 
 .report_date {
